--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,17 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "crocodicstudio/crudbooster": "5.4.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nesbot/carbon": "1.26.0",
+        "reliese/laravel": "^0.0.16"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "ignasbernotas/laravel-model-generator": "^1.2",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
